--- a/news
+++ b/news
@@ -1,1 +1,1 @@
-People that play IdleTale are 1% more happy than people who don't! (I guess)
+People that play IdleTale are 1% more happy than people who don't!
