--- a/news
+++ b/news
@@ -1,1 +1,3 @@
--People that play IdleTale are 1% more happy than people who don't!\n-Wanna participate in IdleTale's 1st Contest? Join our Discord server and win the chance to give name to an item in-game!
+-People that play IdleTale are 1% more happy than people who don't!
+
+-Wanna participate in IdleTale's 1st Contest? Join our Discord server and win the chance to give name to an item in-game!
