--- a/news
+++ b/news
@@ -1,3 +1,5 @@
 -People who play IdleTale are 1% more happy than people who don't!
 
+-The Cloud Save system has been temporarily disabled.
+
 -Wanna participate in IdleTale's 1st Contest? Join our Discord server and win the prize of giving name to an item in-game!
