--- a/news
+++ b/news
@@ -1,3 +1,5 @@
+-If you can't finish a Dungeon or the Grim's Reach events, please update the game.
+
 -People who play IdleTale are 1% more happy than people who don't!
 
 -The Cloud Save system has been temporarily disabled.
