--- a/news
+++ b/news
@@ -1,7 +1,7 @@
--If you can't finish a Dungeon or the Grim's Reach events, please update the game.
-
 -People who play IdleTale are 1% more happy than people who don't!
 
--The Cloud Save system has been temporarily disabled.
+-Patch 0.4.3 arrives October 1st: Halloween Event will last until November 1st
 
--Wanna participate in IdleTale's 1st Contest? Join our Discord server and win the prize of giving name to an item in-game!
+-Wanna participate in IdleTale's contests? Join our Discord server and win the prize of giving name to an item in-game!
+
+-The Cloud Save system has been temporarily disabled
