--- a/news
+++ b/news
@@ -1,3 +1,6 @@
+Known issues (Steam only):
+-Stuck at Grim's Reach? Restart the game after "trading your soul for quite a cool amount of power"!
+
 -People who play IdleTale are 1% more happy than people who don't!
 
 -Patch 0.4.3 arrives October 1st: Halloween Event will last until November 1st
