--- a/news
+++ b/news
@@ -1,5 +1,5 @@
 Known issues:
--Offline gains might take longer than usual. This will be fixed in an upcoming update.
+-Offline gains might take longer than usual to load. This will be fixed in an upcoming update.
 
 -Patch 0.4.3 arrives October 1st: Halloween Event will last until November 1st
 
