--- a/news
+++ b/news
@@ -1,6 +1,4 @@
-Known issues:
--Offline gains might take longer than usual to load. This will be fixed in an upcoming update.
-A game restart may fix the issue.
+-IdleTale is now available on different platforms!
 
 -Patch 0.4.3 arrives October 1st: Halloween Event will last until November 1st
 
