--- a/news
+++ b/news
@@ -1,7 +1,7 @@
+-We're aware of an issue that makes trying to connect to the server slower. We're working on a fix and expect to have it ready within this week.
+
 -IdleTale is now available on different platforms!
 
 -Patch 0.4.3 arrives October 1st: Halloween Event will last until November 1st
 
 -Wanna participate in IdleTale's contests? Join our Discord server and win the prize of giving name to an item in-game!
-
--The Cloud Save system has been temporarily disabled
