--- a/news
+++ b/news
@@ -1,4 +1,5 @@
--We're aware of an issue that makes trying to connect to the server slower. We're working on a fix and expect to have it ready within this week.
+-Known issues:
+-If you can't leave a Dungeon after failing it, update the game to the version 0.4.3 (139)
 
 -IdleTale is now available on different platforms!
 
