--- a/news
+++ b/news
@@ -3,6 +3,6 @@
 
 -IdleTale is now available on different platforms!
 
--Patch 0.4.3 arrives October 1st: Halloween Event will last until November 1st
+-Halloween Event will last until November 1st
 
 -Wanna participate in IdleTale's contests? Join our Discord server and win the prize of giving name to an item in-game!
