--- a/news
+++ b/news
@@ -1,8 +1,7 @@
 -Known issues:
 -We're aware of an issue causing data loss upon an unexpected system shutdown. We're working to fix this as soon as possible.
+(If this ever happened to you, you can reach out on our Discord to ask for assistance recovering your save)
 
 -IdleTale is now available on different platforms!
-
--Halloween Event will last until November 1st
 
 -Wanna participate in IdleTale's contests? Join our Discord server and win the prize of giving name to an item in-game!
