--- a/news
+++ b/news
@@ -1,6 +1,7 @@
--Known issues:
--We're aware of an issue causing data loss upon an unexpected system shutdown. We're working to fix this as soon as possible.
-(If this ever happened to you, you can reach out on our Discord to ask for assistance recovering your save)
+-Deep within, the blood begins to boil...
+
+
+Also...
 
 -IdleTale is now available on different platforms!
 
