--- a/news
+++ b/news
@@ -1,7 +1,4 @@
--Deep within, the blood begins to boil...
-
-
-Also...
+-Patch 0.5.0: Redemption will be out May 15th! (Read patch notes on our Discord)
 
 -IdleTale is now available on different platforms!
 
