--- a/news
+++ b/news
@@ -1,4 +1,4 @@
--Patch 0.5.0: Redemption will be out May 15th! (Read patch notes on our Discord)
+-Patch 0.5.0: Redemption is out May 15th! (Read patch notes on our Discord)
 
 -IdleTale is now available on different platforms!
 
