--- a/news
+++ b/news
@@ -1,5 +1,5 @@
 -Patch 0.5.0: Redemption is out May 15th! (Read patch notes on our Discord)
 
--IdleTale is now available on different platforms!
+-Ed's new dungeon crawler game, Everbane, has just released its demo! (join the Discord to find the download link)
 
--Wanna participate in IdleTale's contests? Join our Discord server and win the prize of giving name to an item in-game!
+-IdleTale is now available on different platforms!
