--- a/news
+++ b/news
@@ -1,4 +1,4 @@
--Patch 0.5.0: Redemption is out May 15th! (Read patch notes on our Discord)
+-Patch 0.5.0: Redemption is out now! (Read patch notes on our Discord)
 
 -Ed's new dungeon crawler game, Everbane, has just released its demo! (join the Discord to find the download link)
 
