--- a/news
+++ b/news
@@ -1,4 +1,4 @@
--Patch 0.5.0: Redemption is out now! (Read patch notes on our Discord)
+-We're aware of an issue with the save system. We're working to fix it as soon as possible, we apologize for any inconveniences caused. Making a backup of your game is strongly recommended the first time you boot up the new update.
 
 -Ed's new dungeon crawler game, Everbane, has just released its demo! (join the Discord to find the download link)
 
