--- a/news
+++ b/news
@@ -1,4 +1,4 @@
--We're aware of an issue with the save system. We're working to fix it as soon as possible, we apologize for any inconveniences caused. Making a backup of your game is strongly recommended the first time you boot up the new update.
+-The SAVE SYSTEM bug (not saving the game) has been fixed. If you're not on game version 0.5.0 (193), please update to that version.
 
 -Ed's new dungeon crawler game, Everbane, has just released its demo! (join the Discord to find the download link)
 
