--- a/news
+++ b/news
@@ -1,4 +1,5 @@
--The SAVE SYSTEM bug (not saving the game) has been fixed. If you're not on game version 0.5.0 (193), please update to that version.
+-The SAVE SYSTEM bug (not saving the game) has been fixed.
+If you're experiencing problems saving your game, make sure it's up to date. The latest version is game version 0.5.0, build 193. If you're not on game version 0.5.0 (193) or later, please update to that version.
 
 -Ed's new dungeon crawler game, Everbane, has just released its demo! (join the Discord to find the download link)
 
