--- a/news
+++ b/news
@@ -1,3 +1,5 @@
 -Ed's new dungeon crawler game, Everbane, has just released its demo! (join the Discord to find the download link)
 
 -IdleTale is now available on different platforms!
+
+-A new update fixing the "Offline" issue has been rolled out. If you cannot load offline gains, make sure to update the game to the version v0.5.0 (219).
